Bug Fix (Double Scroll Bar)

--- a/css/index.scss
+++ b/css/index.scss
@@ -5,16 +5,27 @@ $gradient2: linear-gradient(to bottom, #20962A 0%, #5DE368 187%);
 
 body,
 html {
-  height: 100%;
-}
-
-body {
+  
   width: 100%;
   height: 100%;
   font-family: 'lato', sans-serif;
-  backdrop-filter: blur(5px);
-  background: url(../Bilder/background6.jpg);
+  background-image: url(../Bilder/background6.jpg);
   background-size: cover;
+  background-attachment: fixed;
+  overflow-x: hidden;
+  overflow-y: hidden;
+}
+
+body {
+
+  
+  overflow-y: visible;
+
+  .logo {
+    margin: 0;
+    padding: 0;
+    position: relative;
+  }
 
   .tabelle {
     font-family: Arial, Helvetica, sans-serif;
@@ -37,10 +48,6 @@ body {
 
 .container {
   max-width: 600px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 10px;
-  padding-right: 10px;
 }
 
 h2 {
@@ -60,6 +67,7 @@ h2 {
     display: flex;
     justify-content: space-between;
     margin-bottom: 25px;
+    border: 5px solid black;
   }
 
   .table-header {
@@ -72,11 +80,11 @@ h2 {
 
   .table-row {
     background-color: #ffffff;
-    box-shadow: 0px 0px 9px 0px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 0px 9px 0px rgba(0, 0, 0, 0.5);
   }
 
   .table-row:hover {
-    background-color: #95A5A6;
+    background-color: #3fc3cc;
     cursor: pointer;
   }
 
@@ -175,6 +183,7 @@ nav {
 .dark-mode.active {
   transform: scale(1);
   transition: 1000ms ease-in-out;
+
 }
 
 @media screen and (max-width: 600px) {
