--- a/css/search.scss
+++ b/css/search.scss
@@ -49,8 +49,8 @@ body {
 }
 
 .btn-search {
-  width: 50px;
-  height: 50px;
+  width: 35px;
+  height: 55px;
   border-style: none;
   font-size: 20px;
   font-weight: bold;
@@ -58,7 +58,7 @@ body {
   cursor: pointer;
   border-radius: 50%;
   position: absolute;
-  right: 0px;
+  right: 5px;
   color: black;
   background-color: transparent;
   pointer-events: painted;
@@ -78,10 +78,6 @@ body {
   background-color: transparent;
   border-bottom: 1px solid rgba(255, 255, 255, .5);
   transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
-}
-
-.fa-search:before {
-  content: "\f002";
 }
 
 
